[package]
name = "win32_utils"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib","cdylib"]

[dependencies]
anyhow.workspace = true
windows = { workspace = true, features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",

    "Win32",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_ProcessStatus",
    "Foundation",
] }